static/layout.css
.layout {
    margin: 2rem 2.4rem;
    height: calc(100vh - 2rem * 2); /* full height minus the margin size (top & bottom)*/
    display: grid;
    grid-template-columns: 10% 75% 15%;
    grid-template-rows: 5% 90% 5%;
    align-items: center;
    width: calc(100vw - 2.4rem * 2);
    overflow: hidden;
}

.layout .sidebar {
    grid-row: span 3;
    display: flex;
    flex-direction: column;
    height: 100%;
}

.layout .sidebar .home-icon {
    flex: 5%;
    display: flex;
    align-items: center;
    font-size: 2.2em;
    cursor: pointer;
    height: 1.8em;
    width: 1.8em;
    line-height: 0;
}

.layout .sidebar .contact {
    flex: 90%;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.layout .sidebar .contact a {
    height: 1.8em;
    width: 1.8em;
    margin: 1rem 0;
}

.layout .sidebar .contact a:nth-child(1) {
    height: 2rem;
    width: 2rem;
}

.layout .sidebar .contact a img {
    height: inherit;
    width: inherit;
}

.layout .sidebar .expand-icon {
    flex: 5%;
    display: flex;
    align-items: end;
    cursor: pointer;
    height: 1.8em;
    width: 1.8em;
}

.layout .sidebar .expand-icon img {
    height: inherit;
    width: inherit;
}

.layout .phone-number {
    text-align: right;
}

@media only screen and (max-width: 1024px) {
    .layout {
        margin: 1.5rem 1.5rem;
        height: calc(100vh);
        width: calc(100vw);
        grid-template-columns: 50% 50%;
        grid-template-rows: 8% 8% 84%;
    }

    .layout .sidebar {
        grid-row: 1;
        grid-column: 1;
    }

    .layout .sidebar .home-icon {
        font-size: 1.8em;
    }

    .layout .expand-navigation {
        align-self: center;
        justify-self: end;
        grid-row: 1;
    }

    .layout .expand-navigation img {
        width: 2rem;
        height: 2rem;
        -webkit-transform: scaleX(-1);
        transform: scaleX(-1);
    }
    
    .layout .main-navigation-bar-background {
        display: block;
        position: absolute;
        width: 100vw;
        height: 100vh;
        z-index: -1;
        left: 0;
        opacity: 0;
        transition: 1s all;
        background-color: rgba(0,0,0,0.9); 
        overflow: hidden;
    }

    .layout .main-navigation-bar {
        display: flex;
        flex-direction: column;
        position: absolute;
        background-color: var(--secondary-color);
        right: -70%;
        transition: 1s all;
        overflow: hidden;
        height: 100vh;
        width: 70%;
        align-items: end;
        justify-content: space-between;
        z-index: 2;
    }

    .layout .main-navigation-bar {
        padding: 2.2rem 1.5rem;
    }

    .layout .main-navigation-bar .navigation-bar-container {
        display: flex;
        flex-direction: column;
        align-items: end;
        gap: 1rem;
    }

    .layout .main-navigation-bar .navigation-bar-container a {
        width: fit-content;
    }

    .layout .main-navigation-bar a, .layout .main-navigation-bar button {
        margin: 0;
    }

    .layout .main-navigation-bar .footer {
        display: flex;
        justify-content: space-between;
        width: 100%;
    }

    .layout .main-navigation-bar .expand-icon img {
        width: 1.6rem;
        height: 1.6rem;
    }

    .layout .contract-navigation img {
        width: 1.2rem;
        height: 1.2rem;
    }

    .layout .main-navigation-bar .footer .contact {
        display: flex;
        gap: 1rem;
        align-items: center;
        justify-content: center;
    }

    .layout .main-navigation-bar .footer .contact img {
        width: 1.6rem;
        height: 1.6rem;
    }

    .layout .main-navigation-bar .footer .contact .phone img {
        width: 1.8rem;
        height: 1.8rem;
        margin-left: -.2rem;
        margin-bottom: -.2rem;
    }
}


@media only screen and (min-width: 1025px) and (max-width: 1200px) {
    .layout .sidebar .home-icon {
        font-size: 2em;
    }
    
    .layout .sidebar .contact a {
        width: 1.6rem;
        height: 1.6rem;
    }
    
    .layout .sidebar .contact a:nth-child(1) {
        height: 1.8rem;
        width: 1.8rem;
    }
    
    .layout .sidebar .expand-icon {
        height: 1.6em;
        width: 1.6em;
    }

    .layout .phone-number {
        font-size: .9rem;
    }
}

